SUBDIRS = src/DrawViz src/p4schedgen src/schedgen src/simulator src/txt2bin

.PHONY = simulator drawviz p4schedgen schedgen txt2bin

sim:
	cd src/simulator && make

drawviz:
	cd DrawViz && make

schedgen_portals:
	cd p4schedgen && make

schedgen:
	cd schedgen && make

txt2bin:
	cd src/txt2bin && make
